# xiv-companion

./: .gitignore  Cargo.toml  DESIGN.md  Dioxus.toml  Justfile  README.md  flake.nix  package.json  tailwind.css
.cargo/: config.toml
.github/workflows/: pages.yml
app/: index.html  package.json  tsconfig.app.json  vite.config.ts
app/src/: App.tsx  index.css  index.tsx
app/src/layout/: AppShell.tsx
app/src/lib/: app-modules.ts  character.ts  crafting.ts  index.ts  solver.worker.ts  utils.ts
app/src/modules/crafting/: CraftingPage.tsx
app/src/pages/: CharacterPage.tsx  NotesPage.tsx  PlaceholderPage.tsx  WorkspacePage.tsx
app/src/ui/: badge.tsx  button.tsx  card.tsx  empty-state.tsx  index.ts  input.tsx  separator.tsx  tool-panel.tsx
assets/: tailwind.css
docs/: algo.md
lab/: .gitignore  bidir_rcsp_toy.mjs
lab/raphael-rcsp-bound/: Cargo.toml  README.md  raphael-solver-initial-solution.patch
lab/raphael-rcsp-bound/src/: main.rs
scripts/: update-craft-data.ts
src/: audit.rs  game_data.rs  lib.rs  main.rs  model.rs  planner.rs  solver.rs  wasm.rs
src/app/: data.rs  icons.rs  mod.rs  modules.rs  shell.rs  ui.rs  utils.rs
src/app/pages/: crafting.rs  mod.rs  notes.rs
xtask/xtask-update-craft-data/: Cargo.toml
xtask/xtask-update-craft-data/src/: main.rs
xtasks/update-craft-data/: Cargo.toml
xtasks/update-craft-data/src/: main.rs
