[package]
name = "xiv-companion"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "xiv_companion"
crate-type = ["rlib", "cdylib"]

[features]
default = []
game-data = ["dep:anyhow", "dep:physis"]
wasm = [
    "dep:raphael-simulator",
    "dep:raphael-solver",
    "dep:tsify",
    "dep:wasm-bindgen",
    "tsify/js",
]

[dependencies]
anyhow = { version = "1.0.102", optional = true }
physis = { git = "https://github.com/AzurIce/physis.git", optional = true }
raphael-simulator = { git = "https://github.com/KonaeAkira/raphael-rs.git", package = "raphael-sim", tag = "v0.28.4", optional = true }
raphael-solver = { git = "https://github.com/KonaeAkira/raphael-rs.git", package = "raphael-solver", tag = "v0.28.4", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tsify = { version = "0.5.6", default-features = false, optional = true }
wasm-bindgen = { version = "=0.2.121", optional = true }

[workspace]
members = ["xtask/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false
