[package]
name = "xiv-companion"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "xiv_companion"
crate-type = ["rlib", "cdylib"]

[features]
default = []
game-data = ["dep:anyhow", "dep:physis"]
web = [
    "dep:console_error_panic_hook",
    "dep:dioxus",
    "dep:dioxus-free-icons",
    "dep:gloo-net",
    "dep:js-sys",
    "dep:raphael-simulator",
    "dep:raphael-solver",
    "dep:urlencoding",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
]
wasm = [
    "dep:raphael-simulator",
    "dep:raphael-solver",
    "dep:tsify",
    "tsify/js",
]

[dependencies]
anyhow = { version = "1.0.102", optional = true }
physis = { git = "https://github.com/AzurIce/physis.git", optional = true }
raphael-simulator = { git = "https://github.com/KonaeAkira/raphael-rs.git", package = "raphael-sim", tag = "v0.28.4", optional = true }
raphael-solver = { git = "https://github.com/KonaeAkira/raphael-rs.git", package = "raphael-solver", tag = "v0.28.4", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tsify = { version = "0.5.6", default-features = false, optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
dioxus = { version = "0.7.9", features = ["web", "router"], optional = true }
dioxus-free-icons = { version = "0.10.0", features = ["lucide"], optional = true }
gloo-net = { version = "0.6.0", optional = true }
js-sys = { version = "0.3.83", optional = true }
urlencoding = { version = "2.1.3", optional = true }
wasm-bindgen = "0.2.121"
wasm-bindgen-futures = { version = "0.4.53", optional = true }
web-sys = { version = "0.3.83", features = [
    "Clipboard",
    "Crypto",
    "HtmlInputElement",
    "Navigator",
    "Storage",
    "Window",
], optional = true }

[workspace]
members = ["xtask/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false
