[package]
name = "xtask-update-craft-data"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6", features = ["derive"] }
physis = { git = "https://github.com/AzurIce/physis.git" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
